externalize sensitive configs and add service scaffolding

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,12 @@ application/logs/*
 !application/logs/.htaccess
 
 assets/pics/*
+!assets/pics/.gitkeep
 assets/post/*
 assets/tmp/*
+!assets/tmp/.gitkeep
 application/config/production/*
 application/config/development/*
+
+# Environment files
+.env
