--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,16 @@
 {
     "require": {
-        "php": "^8.0"
+        "php": "^8.0",
+        "laravel/framework": "^12.0",
+        "laravel/sanctum": "^4.0",
+        "laravel/tinker": "^2.9"
     },
     "require-dev": {
-        "phpunit/phpunit": "^10.5"
+        "phpunit/phpunit": "^10.5",
+        "fakerphp/faker": "^1.21",
+        "laravel/pint": "^1.13",
+        "mockery/mockery": "^1.5",
+        "nunomaduro/collision": "^8.1"
     },
     "autoload": {
         "psr-4": {
