--- a/composer.json
+++ b/composer.json
@@ -21,5 +21,10 @@
         "psr-4": {
             "Tests\\": "laravel/tests/"
         }
+    },
+    "scripts": {
+        "migrate": [
+            "@php artisan migrate"
+        ]
     }
 }
